# efficientvit

./: .gitignore  eval_sam_coco.py  pyproject.toml  requirements.txt  run.sh
efficientvit/models/efficientvit/: mask_decoder.py  sam.py
onnx_exporter/: efficientvit_sam_onnx.py  export_decoder.py  export_encoder.py
