[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "efficientvit"
version = "0.0.1"
description = "EfficientViT: Multi-Scale Linear Attention for High-Resolution Dense Prediction"
readme = "README.md"
authors = [{ name = "Han Cai", email = "hancai@mit.edu" }]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
keywords = [
    "Image Classification",
    "Image Segmentation",
    "Segment Anything",
    "Segment Everything",
    "Semantic Segmentation",
]
requires-python = ">=3.6"

dependencies = [
    "torch",
    "torchvision",
    "torchpack",
    "torchprofile",
    "timm",
    "einops",
    "opencv-python",
    "tqdm",
    "transformers",
    "matplotlib",
    "onnx",
    'segment_anything @ git+ssh://git@github.com/facebookresearch/segment-anything.git',
]

[project.optional-dependencies]
dev = [
    "onnxruntime",
    "onnxsim",
    'tinynn @ git+ssh://git@github.com/alibaba/TinyNeuralNetwork.git',
]

[project.urls]
Homepage = "https://github.com/binh234/efficientvit"

[tool.black]
line-length = 120
include = '\.pyi?$'
extend-exclude = ".vscode/.*"

[tool.isort]
profile = "black"
extend_skip = [".vscode"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
